Compensatory Off Approvals

--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
         <div class="backdrop-blur bg-white/10 rounded-xl p-3">
           <p class="text-xs uppercase tracking-wide">Reception</p>
           <p class="font-semibold">Nov 30, 2025</p>
+          <p class="text-xs tracking-wide">Sunday</p>
         </div>
         <div class="backdrop-blur bg-white/10 rounded-xl p-3">
           <p class="text-xs uppercase tracking-wide">Wedding</p>
           <p class="font-semibold">Dec 01, 2025</p>
+          <p class="text-xs tracking-wide">Monday</p>
         </div>
       </div>
       <div class="mt-8 flex flex-col sm:flex-row items-center justify-center gap-3">
@@ -111,7 +113,7 @@
     </div>
   </section>
 
-  <!-- STORY -->
+  <!-- STORY
   <section id="story" class="py-16 sm:py-24">
     <div class="max-w-5xl mx-auto px-4">
       <div class="reveal text-center">
@@ -136,7 +138,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- EVENTS -->
   <section id="events" class="py-16 sm:py-24 bg-gradient-to-b from-rose-100 to-rose-50">
@@ -145,36 +147,31 @@
         <h2 class="text-3xl sm:text-4xl font-bold" style="color: var(--theme-maroon)">Events</h2>
         <p class="mt-3 text-slate-600">Join us for the celebrations</p>
       </div>
-      <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-4">
+      <div class="mt-10 grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="reveal gold-ring rounded-2xl bg-white p-6">
-          <p class="text-xs uppercase tracking-widest text-rose-700">Mehendi</p>
-          <h3 class="mt-1 font-semibold">December 14, 2025 • 5:00 PM</h3>
-          <p class="text-slate-600 text-sm">Family home, Tiruvannamalai</p>
+          <p class="text-xs uppercase tracking-widest text-rose-700">Reception</p>
+          <h3 class="mt-1 font-semibold">November 30, 2025 • 6:00 PM Onwards</h3>
+          <p class="text-slate-600 text-sm">Anandam Mahal, Nasiyanur Road, Erode</p>
         </div>
         <div class="reveal gold-ring rounded-2xl bg-white p-6">
           <p class="text-xs uppercase tracking-widest text-rose-700">Wedding</p>
-          <h3 class="mt-1 font-semibold">December 15, 2025 • 9:00 AM</h3>
-          <p class="text-slate-600 text-sm">Sri Arunachaleswarar Temple</p>
-        </div>
-        <div class="reveal gold-ring rounded-2xl bg-white p-6">
-          <p class="text-xs uppercase tracking-widest text-rose-700">Reception</p>
-          <h3 class="mt-1 font-semibold">December 15, 2025 • 6:30 PM</h3>
-          <p class="text-slate-600 text-sm">Banquet Hall, Tiruvannamalai</p>
+          <h3 class="mt-1 font-semibold">December 01, 2025 • 4:00 AM - 5:00 AM</h3>
+          <p class="text-slate-600 text-sm">Arulmigu Muthu Maragathavalli Moovendhireeswarar Thirukovil, Nasiyanur</p>
         </div>
       </div>
       <div id="location" class="reveal mt-10 grid grid-cols-1 lg:grid-cols-2 gap-6 items-stretch">
         <div class="gold-ring rounded-2xl bg-white p-6">
-          <h4 class="font-semibold">Venue</h4>
-          <p class="text-sm text-slate-600">Sri Arunachaleswarar Temple, Tiruvannamalai, Tamil Nadu</p>
-          <a target="_blank" rel="noopener" href="https://maps.google.com/?q=Sri+Arunachaleswarar+Temple+Tiruvannamalai" class="mt-3 inline-flex rounded-full px-4 py-2 text-white" style="background: var(--theme-maroon)">Open in Google Maps</a>
+          <h4 class="font-semibold">Reception Venue</h4>
+          <p class="text-sm text-slate-600">Anandam Mahal, Nasiyanur road, Erode</p>
+          <a target="_blank" rel="noopener" href="https://www.google.com/maps/place/Anandam+Mahal/@11.3430052,77.6886473,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba96f002ac11005:0xb815566d7ea2c2fb!8m2!3d11.343!4d77.6912222!16s%2Fg%2F11mkrq3nw2?entry=ttu&g_ep=EgoyMDI1MTEwNC4xIKXMDSoASAFQAw%3D%3D" class="mt-3 inline-flex rounded-full px-4 py-2 text-white" style="background: var(--theme-maroon)">Open in Google Maps</a>
         </div>
         <div class="gold-ring rounded-2xl bg-white p-6">
-          <h4 class="font-semibold">Venue</h4>
-          <p class="text-sm text-slate-600">Sri Arunachaleswarar Temple, Tiruvannamalai, Tamil Nadu</p>
-          <a target="_blank" rel="noopener" href="https://maps.google.com/?q=Sri+Arunachaleswarar+Temple+Tiruvannamalai" class="mt-3 inline-flex rounded-full px-4 py-2 text-white" style="background: var(--theme-maroon)">Open in Google Maps</a>
+          <h4 class="font-semibold">Wedding Venue</h4>
+          <p class="text-sm text-slate-600">Arulmigu Muthu Maragathavalli Moovendhireeswarar Thirukovil, Nasiyanur</p>
+          <a target="_blank" rel="noopener" href="https://www.google.com/maps/place/Moovendhar+Easwaran+Kovil/@11.3412698,77.639579,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba96c102c62fb95:0xa13ab35d4da9f4e2!8m2!3d11.3412698!4d77.639579!16s%2Fg%2F12hkd7vld?entry=ttu&g_ep=EgoyMDI1MTExMS4wIKXMDSoASAFQAw%3D%3D" class="mt-3 inline-flex rounded-full px-4 py-2 text-white" style="background: var(--theme-maroon)">Open in Google Maps</a>
         </div>
         <div class="gold-ring rounded-2xl bg-white overflow-hidden">
-          <iframe title="Map" class="w-full h-64 sm:h-80" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=Sri%20Arunachaleswarar%20Temple%2C%20Tiruvannamalai&output=embed"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.9101967606584!2d77.639579!3d11.3412698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba96c102c62fb95%3A0xa13ab35d4da9f4e2!2sMoovendhar%20Easwaran%20Kovil!5e0!3m2!1sen!2sin!4v1763094094480!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
@@ -186,10 +183,9 @@
       <h2 class="text-3xl sm:text-4xl font-bold" style="color: var(--theme-maroon)">RSVP</h2>
       <p class="mt-3 text-slate-600">We'd love to know if you can make it! Please confirm your presence.</p>
       <div class="mt-6 grid grid-cols-1 gap-3">
-        <a target="_blank" rel="noopener" href="https://forms.gle/your-google-form" class="rounded-full px-6 py-3 text-white font-semibold" style="background: var(--theme-maroon)">Fill Google Form</a>
-        <a target="_blank" rel="noopener" href="https://wa.me/910000000000?text=RSVP%20for%20Mouli%20%26%20Priya%20Wedding" class="rounded-full px-6 py-3 font-semibold bg-white border border-rose-200">Message on WhatsApp</a>
+        <!-- <a target="_blank" rel="noopener" href="https://forms.gle/your-google-form" class="rounded-full px-6 py-3 text-white font-semibold" style="background: var(--theme-maroon)">Fill Google Form</a> -->
+        <a target="_blank" rel="noopener" href="https://wa.me/917904907149?text=RSVP%20for%20Mouli%20%26%20Priya%20Wedding" class="rounded-full px-6 py-3 font-semibold bg-white border border-rose-200">Message on WhatsApp</a>
       </div>
-      <p class="text-xs text-slate-500 mt-3">Replace links with your own form or number.</p>
     </div>
   </section>
 
@@ -221,7 +217,11 @@
       <div class="mt-8 grid grid-cols-1 md:grid-cols-1 gap-4">
         <div class="reveal gold-ring rounded-2xl bg-white p-6 text-center">
           <p class="text-xs uppercase tracking-widest text-rose-700">Phone</p>
-          <a href="tel:+919000000000" class="mt-1 font-semibold">+91 7904907149</a>
+          <a href="tel:+917904907149" class="mt-1 font-semibold">+91 7904907149</a>
+        </div>
+        <div class="reveal gold-ring rounded-2xl bg-white p-6 text-center">
+          <p class="text-xs uppercase tracking-widest text-rose-700">Phone</p>
+          <a href="tel:+919159962348" class="mt-1 font-semibold">+91 9159962348</a>
         </div>
       </div>
     </div>
@@ -230,7 +230,7 @@
   <!-- FOOTER -->
   <footer class="py-10 border-t border-rose-200/60 text-center text-sm bg-rose-50">
     <p>Made with ♥️ by Mouli & Kousalya • 2025</p>
-    <p class="text-xs text-slate-500 mt-1">Replace names, dates, and links with your details.</p>
+    <p class="text-xs text-slate-500 mt-1"></p>
   </footer>
 
   <!-- AUDIO (optional) -->
