Compensatory Off Approvals

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Mouli ❤️ Kousalya — Wedding Invitation</title>
   <meta name="description" content="You're invited to celebrate our wedding. Join us for a day of love, laughter, and happily ever after!" />
   <meta property="og:title" content="Mouli ❤️ Kousalya — Wedding Invitation" />
-  <meta property="og:description" content="Save the date and celebrate with us in Tiruvannamalai." />
+  <meta property="og:description" content="Save the date and celebrate with us." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://images.unsplash.com/photo-1596347120126-c75f9a406aa2?q=80&w=1200&auto=format&fit=crop" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
