Compensatory Off Approvals

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <p class="mt-3 text-slate-600">We'd love to know if you can make it! Please confirm your presence.</p>
       <div class="mt-6 grid grid-cols-1 gap-3">
         <!-- <a target="_blank" rel="noopener" href="https://forms.gle/your-google-form" class="rounded-full px-6 py-3 text-white font-semibold" style="background: var(--theme-maroon)">Fill Google Form</a> -->
-        <a target="_blank" rel="noopener" href="https://wa.me/917904907149?text=RSVP%20for%20Mouli%20%26%20Priya%20Wedding" class="rounded-full px-6 py-3 font-semibold bg-white border border-rose-200">Message on WhatsApp</a>
+        <a target="_blank" rel="noopener" href="https://wa.me/917904907149?text=RSVP%20for%20Mouli%20%26%20Kousalya%20Wedding" class="rounded-full px-6 py-3 font-semibold bg-white border border-rose-200">Message on WhatsApp</a>
       </div>
     </div>
   </section>
